--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+beautifulsoup4 = "^4.12.3"
+requests = "^2.31.0"
 
 
 [build-system]
